<resources>
    <string name="app_name">De camino a Casa</string>
    <string name="welcome_message">De camino a casa</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="register_button">Registrarse</string>
    <string name="new_user_title">Nuevo usuario</string>
    <string name="community_subtitle">Sé parte de la comunidad</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_password">Contraseña</string>
    <string name="welcome_back">Bienvenido</string>
    <string name="back_button">Volver</string>
    <string name="help_message">Ayúdanos a volver a casa</string>
    <string name="search_hint">Ajustar búsqueda</string>
    <string name="profile_desc">Perfil de usuario</string>
    <string name="desc_location">Ubicación</string>
    <string name="desc_search_pet">Buscar mascota</string>
    <string name="desc_chat">Chat</string>
</resources>